k8s/base/service-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: sigloop
spec:
  selector:
    app: api-service
  ports:
    - name: http
      port: 8788
      targetPort: 8788
