k8s/base/service-landing.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: sigloop
spec:
  selector:
    app: landing
  ports:
    - name: http
      port: 80
      targetPort: 80
