k8s/base/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sigloop-api
  namespace: sigloop
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: sigloop.local
      http:
        paths:
          - path: /api/card-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: card-service
                port:
                  number: 8787
          - path: /api/api-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-service
                port:
                  number: 8788
