k8s/base/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sigloop-web
  namespace: sigloop
spec:
  ingressClassName: nginx
  rules:
    - host: sigloop.local
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
